--- a/nlp/front/ioc/pom.xml
+++ b/nlp/front/ioc/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-front</artifactId>
-        <version>0.2.7</version>
+        <version>0.2.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-front-ioc</artifactId>
