--- a/nlp/front/ioc/pom.xml
+++ b/nlp/front/ioc/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-front</artifactId>
-        <version>19.9.2</version>
+        <version>19.9.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-front-ioc</artifactId>
