--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -30,7 +30,7 @@
     "ang-jsoneditor": "^1.10.5",
     "angular-file-saver": "^1.1.3",
     "bootstrap": "^4.4.1",
-    "ckeditor4": "^4.12.1",
+    "ckeditor4": ">=4.17.0",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.6.11",
     "cytoscape": "^3.14.2",
@@ -52,7 +52,7 @@
     "ngx-echarts": "^6.0.1",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^5.0.0",
-    "node-sass": "^4.14.1",
+    "node-sass": ">=7.0.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
@@ -76,7 +76,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "karma": ">=6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -88,5 +88,29 @@
     "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
     "typescript": "4.1.5"
+  },
+  "resolutions": {
+    "follow-redirects": ">=1.14.8",
+    "log4js": ">=6.4.0",
+    "node-forge": ">=1.0.0",
+    "engine.io": ">=4.1.2",
+    "is-svg": ">=4.3.0",
+    "json-schema": ">=0.4.0",
+    "ansi-regex": ">=5.0.1",
+    "nth-check": ">=2.0.1",
+    "zrender": ">=5.2.1",
+    "tar": ">=6.1.9",
+    "path-parse": ">=1.0.7",
+    "jszip": ">=3.7.0",
+    "url-parse": ">=1.5.2",
+    "@npmcli/git": ">=2.0.8",
+    "postcss": ">=8.2.10",
+    "trim-newlines": ">=3.0.1",
+    "glob-parent": ">=5.1.2",
+    "ws": ">=7.4.6",
+    "dns-packet": ">=1.3.2",
+    "browserslist": ">=4.16.5",
+    "hosted-git-info": ">=2.8.9",
+    "ssri": ">=6.0.2"
   }
 }
