--- a/nlp/front/ioc/pom.xml
+++ b/nlp/front/ioc/pom.xml
@@ -43,6 +43,11 @@
         </dependency>
         <dependency>
             <groupId>ai.tock</groupId>
+            <artifactId>tock-nlp-model-bgem3</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ai.tock</groupId>
             <artifactId>tock-nlp-model-service</artifactId>
         </dependency>
         <dependency>
