resolve #1628 [NLP-Model] Fix problems with Sagemaker model integration + add integration test for english request

--- a/nlp/front/ioc/pom.xml
+++ b/nlp/front/ioc/pom.xml
@@ -43,6 +43,10 @@
         </dependency>
         <dependency>
             <groupId>ai.tock</groupId>
+            <artifactId>tock-nlp-model-sagemaker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ai.tock</groupId>
             <artifactId>tock-nlp-model-service</artifactId>
         </dependency>
         <dependency>
